tests/paczka1/small_fuzzy/42818243.err
Error in line 6: I9o5PoLyMmM A146 4,9
Error in line 9: I9o5PoLyMmM A537 6,0
